src/speech_api.rs

pub type CUSTOM_AUDIO_PULL_STREAM_READ_CALLBACK = ::std::option::Option<
    unsafe extern "C" fn(
        pvContext: *mut ::std::os::raw::c_void,
        buffer: *mut u8,
        size: u32,
    ) -> ::std::os::raw::c_int,
>;
pub type CUSTOM_AUDIO_PULL_STREAM_CLOSE_CALLBACK =
    ::std::option::Option<unsafe extern "C" fn(pvContext: *mut ::std::os::raw::c_void)>;
extern "C" {
    #[link_name = "\u{1}_pull_audio_input_stream_set_callbacks"]
    pub fn pull_audio_input_stream_set_callbacks(
        haudioStream: SPXAUDIOSTREAMHANDLE,
        pvContext: *mut ::std::os::raw::c_void,
        readCallback: CUSTOM_AUDIO_PULL_STREAM_READ_CALLBACK,
        closeCallback: CUSTOM_AUDIO_PULL_STREAM_CLOSE_CALLBACK,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_push_audio_input_stream_write"]
    pub fn push_audio_input_stream_write(
        haudioStream: SPXAUDIOSTREAMHANDLE,
        buffer: *mut u8,
        size: u32,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_push_audio_input_stream_close"]
    pub fn push_audio_input_stream_close(haudioStream: SPXAUDIOSTREAMHANDLE) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_audio_config_is_handle_valid"]
    pub fn audio_config_is_handle_valid(haudioConfig: SPXAUDIOCONFIGHANDLE) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_audio_config_create_audio_input_from_default_microphone"]
    pub fn audio_config_create_audio_input_from_default_microphone(
        haudioConfig: *mut SPXAUDIOCONFIGHANDLE,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_audio_config_create_audio_input_from_wav_file_name"]
    pub fn audio_config_create_audio_input_from_wav_file_name(
        haudioConfig: *mut SPXAUDIOCONFIGHANDLE,
        fileName: *const ::std::os::raw::c_char,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_audio_config_create_audio_input_from_stream"]
    pub fn audio_config_create_audio_input_from_stream(
        haudioConfig: *mut SPXAUDIOCONFIGHANDLE,
        haudioStream: SPXAUDIOSTREAMHANDLE,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_audio_config_create_push_audio_input_stream"]
    pub fn audio_config_create_push_audio_input_stream(
        haudioConfig: *mut SPXAUDIOCONFIGHANDLE,
        haudioStream: *mut SPXAUDIOSTREAMHANDLE,
        hformat: SPXAUDIOSTREAMFORMATHANDLE,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_audio_config_create_pull_audio_input_stream"]
    pub fn audio_config_create_pull_audio_input_stream(
        haudioConfig: *mut SPXAUDIOCONFIGHANDLE,
        haudioStream: *mut SPXAUDIOSTREAMHANDLE,
        hformat: SPXAUDIOSTREAMFORMATHANDLE,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_audio_config_release"]
    pub fn audio_config_release(haudioConfig: SPXAUDIOCONFIGHANDLE) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_create_speech_recognizer_from_config"]
    pub fn recognizer_create_speech_recognizer_from_config(
        phreco: *mut SPXRECOHANDLE,
        hspeechconfig: SPXSPEECHCONFIGHANDLE,
        haudioInput: SPXAUDIOCONFIGHANDLE,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_create_translation_recognizer_from_config"]
    pub fn recognizer_create_translation_recognizer_from_config(
        phreco: *mut SPXRECOHANDLE,
        hspeechconfig: SPXSPEECHCONFIGHANDLE,
        haudioInput: SPXAUDIOCONFIGHANDLE,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_create_intent_recognizer_from_config"]
    pub fn recognizer_create_intent_recognizer_from_config(
        phreco: *mut SPXRECOHANDLE,
        hspeechconfig: SPXSPEECHCONFIGHANDLE,
        haudioInput: SPXAUDIOCONFIGHANDLE,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_handle_is_valid"]
    pub fn recognizer_handle_is_valid(hreco: SPXRECOHANDLE) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_handle_release"]
    pub fn recognizer_handle_release(hreco: SPXRECOHANDLE) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_async_handle_is_valid"]
    pub fn recognizer_async_handle_is_valid(hasync: SPXASYNCHANDLE) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_async_handle_release"]
    pub fn recognizer_async_handle_release(hasync: SPXASYNCHANDLE) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_result_handle_is_valid"]
    pub fn recognizer_result_handle_is_valid(hresult: SPXRESULTHANDLE) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_result_handle_release"]
    pub fn recognizer_result_handle_release(hresult: SPXRESULTHANDLE) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_event_handle_is_valid"]
    pub fn recognizer_event_handle_is_valid(hevent: SPXEVENTHANDLE) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_event_handle_release"]
    pub fn recognizer_event_handle_release(hevent: SPXEVENTHANDLE) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_enable"]
    pub fn recognizer_enable(hreco: SPXRECOHANDLE) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_disable"]
    pub fn recognizer_disable(hreco: SPXRECOHANDLE) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_is_enabled"]
    pub fn recognizer_is_enabled(hreco: SPXRECOHANDLE, pfEnabled: *mut bool) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_get_property_bag"]
    pub fn recognizer_get_property_bag(
        hreco: SPXRECOHANDLE,
        hpropbag: *mut SPXPROPERTYBAGHANDLE,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_recognize_once"]
    pub fn recognizer_recognize_once(hreco: SPXRECOHANDLE, phresult: *mut SPXRESULTHANDLE)
        -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_recognize_once_async"]
    pub fn recognizer_recognize_once_async(
        hreco: SPXRECOHANDLE,
        phasync: *mut SPXASYNCHANDLE,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_recognize_once_async_wait_for"]
    pub fn recognizer_recognize_once_async_wait_for(
        hasync: SPXASYNCHANDLE,
        milliseconds: u32,
        phresult: *mut SPXRESULTHANDLE,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_start_continuous_recognition"]
    pub fn recognizer_start_continuous_recognition(hreco: SPXRECOHANDLE) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_start_continuous_recognition_async"]
    pub fn recognizer_start_continuous_recognition_async(
        hreco: SPXRECOHANDLE,
        phasync: *mut SPXASYNCHANDLE,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_start_continuous_recognition_async_wait_for"]
    pub fn recognizer_start_continuous_recognition_async_wait_for(
        hasync: SPXASYNCHANDLE,
        milliseconds: u32,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_stop_continuous_recognition"]
    pub fn recognizer_stop_continuous_recognition(hreco: SPXRECOHANDLE) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_stop_continuous_recognition_async"]
    pub fn recognizer_stop_continuous_recognition_async(
        hreco: SPXRECOHANDLE,
        phasync: *mut SPXASYNCHANDLE,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_stop_continuous_recognition_async_wait_for"]
    pub fn recognizer_stop_continuous_recognition_async_wait_for(
        hasync: SPXASYNCHANDLE,
        milliseconds: u32,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_start_keyword_recognition"]
    pub fn recognizer_start_keyword_recognition(
        hreco: SPXRECOHANDLE,
        hkeyword: SPXKEYWORDHANDLE,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_start_keyword_recognition_async"]
    pub fn recognizer_start_keyword_recognition_async(
        hreco: SPXRECOHANDLE,
        hkeyword: SPXKEYWORDHANDLE,
        phasync: *mut SPXASYNCHANDLE,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_start_keyword_recognition_async_wait_for"]
    pub fn recognizer_start_keyword_recognition_async_wait_for(
        hasync: SPXASYNCHANDLE,
        milliseconds: u32,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_stop_keyword_recognition"]
    pub fn recognizer_stop_keyword_recognition(hreco: SPXRECOHANDLE) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_stop_keyword_recognition_async"]
    pub fn recognizer_stop_keyword_recognition_async(
        hreco: SPXRECOHANDLE,
        phasync: *mut SPXASYNCHANDLE,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_stop_keyword_recognition_async_wait_for"]
    pub fn recognizer_stop_keyword_recognition_async_wait_for(
        hasync: SPXASYNCHANDLE,
        milliseconds: u32,
    ) -> SPXHR;
}
pub type PSESSION_CALLBACK_FUNC = ::std::option::Option<
    unsafe extern "C" fn(
        hreco: SPXRECOHANDLE,
        hevent: SPXEVENTHANDLE,
        pvContext: *mut ::std::os::raw::c_void,
    ),
>;
extern "C" {
    #[link_name = "\u{1}_recognizer_session_started_set_callback"]
    pub fn recognizer_session_started_set_callback(
        hreco: SPXRECOHANDLE,
        pCallback: PSESSION_CALLBACK_FUNC,
        pvContext: *mut ::std::os::raw::c_void,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_session_stopped_set_callback"]
    pub fn recognizer_session_stopped_set_callback(
        hreco: SPXRECOHANDLE,
        pCallback: PSESSION_CALLBACK_FUNC,
        pvContext: *mut ::std::os::raw::c_void,
    ) -> SPXHR;
}
pub type PRECOGNITION_CALLBACK_FUNC = ::std::option::Option<
    unsafe extern "C" fn(
        hreco: SPXRECOHANDLE,
        hevent: SPXEVENTHANDLE,
        pvContext: *mut ::std::os::raw::c_void,
    ),
>;
extern "C" {
    #[link_name = "\u{1}_recognizer_recognizing_set_callback"]
    pub fn recognizer_recognizing_set_callback(
        hreco: SPXRECOHANDLE,
        pCallback: PRECOGNITION_CALLBACK_FUNC,
        pvContext: *mut ::std::os::raw::c_void,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_recognized_set_callback"]
    pub fn recognizer_recognized_set_callback(
        hreco: SPXRECOHANDLE,
        pCallback: PRECOGNITION_CALLBACK_FUNC,
        pvContext: *mut ::std::os::raw::c_void,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_canceled_set_callback"]
    pub fn recognizer_canceled_set_callback(
        hreco: SPXRECOHANDLE,
        pCallback: PRECOGNITION_CALLBACK_FUNC,
        pvContext: *mut ::std::os::raw::c_void,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_speech_start_detected_set_callback"]
    pub fn recognizer_speech_start_detected_set_callback(
        hreco: SPXRECOHANDLE,
        pCallback: PRECOGNITION_CALLBACK_FUNC,
        pvContext: *mut ::std::os::raw::c_void,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_speech_end_detected_set_callback"]
    pub fn recognizer_speech_end_detected_set_callback(
        hreco: SPXRECOHANDLE,
        pCallback: PRECOGNITION_CALLBACK_FUNC,
        pvContext: *mut ::std::os::raw::c_void,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_session_event_get_session_id"]
    pub fn recognizer_session_event_get_session_id(
        hevent: SPXEVENTHANDLE,
        pszSessionId: *mut ::std::os::raw::c_char,
        cchSessionId: u32,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_recognition_event_get_offset"]
    pub fn recognizer_recognition_event_get_offset(
        hevent: SPXEVENTHANDLE,
        pszOffset: *mut u64,
    ) -> SPXHR;
}
extern "C" {
    #[link_name = "\u{1}_recognizer_recognition_event_get_result"]
    pub fn recognizer_recognition_event_get_result(
        hevent: SPXEVENTHANDLE,
        phresult: *mut SPXRESULTHANDLE,
    ) -> SPXHR;
}
